Disable function_body_length swiftlint rule
Some of the test specs make more sense if the functions are not
broken up

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,3 +1,5 @@
+disabled_rules: #rule identifiers to exclude from running
+  - function_body_length
 included: # paths to include during linting. `--path` is ignored if present.
   - localview
   - localviewTests
